27.6.9
------


27.6.8
------
(RB=1809448)
LastSeenLoadBalancer: adding back again support for custom d2ServicePath on ZK. Add support for BackupStoreFilePath to LastSeen

27.6.7
------
(RB=1816822)
Rephrase PDL parser error messages to make them more clear

(RB=1809448)
Revert "LastSeenLoadBalancer: adding support for custom d2ServicePath on ZK. Add support for BackupStoreFilePath to LastSeen"

27.6.6
------
(RB=1809448)
LastSeenLoadBalancer: adding support for custom d2ServicePath on ZK. Add support for BackupStoreFilePath to LastSeen

27.6.5
------
(RB=1803600)
Add an configurable option to exclude some typeRef properties from translating into avro schema

27.6.4
------
(RB=1803237)
Fix bug when convert .pdsc to .avsc with override namespace prefix in DENORMALIZE model

27.6.3
------
(RB=1771744)
Streaming Timeout (Idle Timeout) Implementation - as detiled in the document @ https://docs.google.com/document/d/1s1dNjqoUkmo2TZ4mql4utHB2CZwe14JW8EPZFRmxOwA

(RB=1802974)
Add RestRequest support in Pipeline V2 and Convert FullyBuffered StreaRequest to RestRequest for better efficiency.

27.6.2
------
(RB=1807496)
Add a varargs constructor to *Array classes.

27.6.1
------
(RB=1807058)
Fix unreliable unit tests in TestRestClientRequestBuilder

(RB=1799751)
Fix PDL encoder logic for writing import statements

(RB=1794904)
Pegasus tmc release job is failing with out of memory error while runing r2-int-tests. Try to reduce the overall memory
footprint by having one netty eventloop group and cleaning up objects created in tests

(RB=1783117)
Add a config field in RestLiMethodConfig to validate query parameters

(RB=1788651)
Set the initial capacity of records and union templates to reduce unused memory.

(RB=1791278)
Int-tests for Alternative Key Server Implementation

(RB=1795608)
Fix PDL bug for encoding escaped package declarations

(RB=1794668)
Fix PDL bug for encoding schemas with empty namespaces

(RB=1793893)